--- a/requirements.txt
+++ b/requirements.txt
@@ -1,118 +1,134 @@
-anyio==3.7.1
-appdirs==1.4.4
-arxiv==2.1.0
-astor==0.8.1
-async-lru==2.0.4
-atomicwrites==1.4.0
-backoff==2.2.1
-backports.weakref==1.0.post1
-bcrypt==4.0.1
-blessed==1.20.0
-brotlipy==0.7.0
-Chroma==0.2.0
-chroma-hnswlib==0.7.3
-chromadb==0.4.14
-clyent==1.2.2
-coloredlogs==15.0.1
-conda-repo-cli==1.0.75
-conda-verify==3.4.2
-constantly==15.1.0
-cssselect==1.1.0
-datashape==0.5.4
-distro==1.9.0
-et-xmlfile==1.1.0
-fastapi==0.104.0
-feedparser==6.0.10
-ffmpeg==1.4
-flatbuffers==23.5.26
-fonttools==4.25.0
-fqdn==1.5.1
-git-python==1.0.3
-gitdb==4.0.11
-GitPython==3.1.40
-grpcio==1.59.0
-h11==0.14.0
-halo==0.0.31
-httpcore==1.0.4
-httptools==0.6.1
-httpx==0.27.0
-humanfriendly==10.0
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-inflection==0.5.1
-inquirer==3.1.3
-isoduration==20.11.0
-jsonpointer==2.1
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.1.4
-jupyterlab_server==2.25.2
-litellm==0.8.6
-log-symbols==0.0.14
-monotonic==1.6
-munkres==1.1.4
-notebook==7.1.1
-onnxruntime==1.16.1
-ooba==0.0.21
-open-interpreter==0.1.10
-openai==1.13.3
-opencv-python==4.9.0.80
-openpyxl==3.0.10
-overrides==7.4.0
-patsy==0.5.3
-pep8==1.7.1
-ply==3.11
-posthog==3.0.2
-protobuf==4.24.4
-pulsar-client==3.3.0
-pyarrow==11.0.0
-pyasn1-modules==0.2.8
-PyDispatcher==2.0.5
-pydub==0.25.1
-pyls-spyder==0.4.0
-pynput==1.7.6
-pyobjc-core==10.1
-pyobjc-framework-ApplicationServices==10.1
-pyobjc-framework-Cocoa==10.1
-pyobjc-framework-CoreText==10.1
-pyobjc-framework-Quartz==10.1
-PyPDF2==3.0.1
-PyPika==0.48.9
-PyQt5-sip==12.11.0
-python-dotenv==1.0.0
-python-editor==1.0.4
-python-lsp-jsonrpc==1.0.0
-PyYAML==6.0.1
-pyzmq==25.1.2
-readchar==4.0.5
-referencing==0.33.0
-rich==13.6.0
-rpds-py==0.17.1
-Send2Trash==1.8.2
-sentencepiece==0.2.0
-sgmllib3k==1.0.0
-smmap==5.0.1
-spinners==0.0.24
-starlette==0.27.0
-termcolor==2.3.0
-tiktoken==0.4.0
-tokentrim==0.1.10
-torch==2.1.2
-torchinfo==1.8.0
-torchsummary==1.5.1
-torchvision==0.16.2
-typer==0.9.0
-typing_extensions==4.8.0
-uri-template==1.3.0
-uvicorn==0.23.2
-uvloop==0.19.0
-watchfiles==0.21.0
-webcolors==1.13
-webencodings==0.5.1
-websockets==11.0.3
-wget==3.2
-yaspin==3.0.1
+anyio>=3.7.1
+appdirs>=1.4.4
+arxiv>=2.1.0
+astor>=0.8.1
+async-lru>=2.0.4
+atomicwrites>=1.4.0
+backoff>=2.2.1
+backports.weakref>=1.0.post1
+bcrypt>=4.0.1
+bitsandbytes>=0.42.0
+blessed>=1.20.0
+Bottleneck>=1.3.8
+brotlipy>=0.7.0
+catppuccin-jupyterlab>=0.2.0
+chapyter>=0.3.1
+Chroma>=0.2.0
+chroma-hnswlib>=0.7.3
+chromadb>=0.4.14
+clyent>=1.2.2
+coloredlogs>=15.0.1
+comm>=0.2.2
+conda-repo-cli>=1.0.75
+conda-verify>=3.4.2
+constantly>=15.1.0
+cssselect>=1.1.0
+datashape>=0.5.4
+diskcache>=5.6.3
+distro>=1.9.0
+et-xmlfile>=1.1.0
+fastapi>=0.104.0
+feedparser>=6.0.10
+ffmpeg>=1.4
+flatbuffers>=23.5.26
+fonttools>=4.25.0
+fqdn>=1.5.1
+galore-torch>=1.0
+git-python>=1.0.3
+gitdb>=4.0.11
+GitPython>=3.1.40
+grpcio>=1.59.0
+guidance>=0.1.13
+h11>=0.14.0
+halo>=0.0.31
+httpcore>=1.0.4
+httptools>=0.6.1
+httpx>=0.27.0
+humanfriendly>=10.0
+importlib-metadata>=6.8.0
+importlib-resources>=6.1.0
+inflection>=0.5.1
+inquirer>=3.1.3
+ipywidgets>=8.1.2
+isoduration>=20.11.0
+jsonpointer>=2.1
+jsonschema>=4.21.1
+jsonschema-specifications>=2023.12.1
+jupyter-events>=0.9.0
+jupyter-lsp>=2.2.2
+jupyter_server>=2.12.5
+jupyter_server_terminals>=0.5.2
+jupyterlab>=4.1.4
+jupyterlab_server>=2.25.2
+jupyterlab_widgets>=3.0.10
+litellm>=0.8.6
+log-symbols>=0.0.14
+monotonic>=1.6
+munkres>=1.1.4
+notebook>=7.1.1
+numpy>=1.26.4
+onnxruntime>=1.16.1
+ooba>=0.0.21
+open-interpreter>=0.1.10
+openai>=1.13.3
+opencv-python>=4.9.0.80
+openpyxl>=3.0.10
+ordered-set>=4.1.0
+overrides>=7.4.0
+pandas>=2.2.2
+patsy>=0.5.3
+pep8>=1.7.1
+ply>=3.11
+posthog>=3.0.2
+protobuf>=4.24.4
+pulsar-client>=3.3.0
+pyarrow>=11.0.0
+pyasn1-modules>=0.2.8
+PyDispatcher>=2.0.5
+pydot>=2.0.0
+pydub>=0.25.1
+pyformlang>=1.0.9
+pyls-spyder>=0.4.0
+pynput>=1.7.6
+pyobjc-core>=10.1
+pyobjc-framework-ApplicationServices>=10.1
+pyobjc-framework-Cocoa>=10.1
+pyobjc-framework-CoreText>=10.1
+pyobjc-framework-Quartz>=10.1
+PyPDF2>=3.0.1
+PyPika>=0.48.9
+PyQt5-sip>=12.11.0
+python-dotenv>=1.0.0
+python-editor>=1.0.4
+python-lsp-jsonrpc>=1.0.0
+PyYAML>=6.0.1
+pyzmq>=25.1.2
+readchar>=4.0.5
+referencing>=0.33.0
+rich>=13.6.0
+rpds-py>=0.17.1
+Send2Trash>=1.8.2
+sentencepiece>=0.2.0
+sgmllib3k>=1.0.0
+smmap>=5.0.1
+spinners>=0.0.24
+starlette>=0.27.0
+termcolor>=2.3.0
+tiktoken>=0.4.0
+tokentrim>=0.1.10
+torch>=2.1.2
+torchinfo>=1.8.0
+torchsummary>=1.5.1
+torchvision>=0.16.2
+typer>=0.9.0
+typing_extensions>=4.8.0
+uri-template>=1.3.0
+uvicorn>=0.23.2
+uvloop>=0.19.0
+watchfiles>=0.21.0
+webcolors>=1.13
+webencodings>=0.5.1
+websockets>=11.0.3
+wget>=3.2
+widgetsnbextension>=4.0.10
+yaspin>=3.0.1
